[project]
name = "gemi2api-server"
version = "0.5.0+enhanced"
description = "Enhanced FastAPI server for Gemini Web API with intelligent session reuse, YAML config support, and advanced features."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "browser-cookie3>=0.20.1",
    "fastapi>=0.115.0",
    "gemini-webapi>=1.14.0",
    "lmdb>=1.6.0",
    "orjson>=3.8.0", 
    "loguru>=0.7.0",
    "pydantic>=2.10.0",
    "pydantic-settings[yaml]>=2.10.0",
    "httpx>=0.25.0",
    "uvicorn[standard]>=0.35.0",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# UV tool configuration
[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
extra-index-url = ["https://pypi.org/simple"]

# Dependency groups for development
[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "RUF", "B", "C90", "UP"]
ignore = ["E501", "B008", "UP007"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
